# invoice-ocr

./: .gitignore  Dockerfile  docker-compose.yml  makefile  pyproject.toml  pytest.ini  signing-key.gpg
sql/: schema.sql
src/invoice_ocr/: __init__.py  __main__.py  database.py  db.py  generate.py  invoice.html  invoice.j2  logging.py  schema.py  schema.sql  settings.py
tests/: test_db.py
